bug fixes, scrolling behind modal, context menu, contacts scrolling

--- a/styles/general.css
+++ b/styles/general.css
@@ -51,7 +51,7 @@
 body {
 	margin: 0;
 	font-family: "Inter", sans-serif;
-	max-height: 100svh;
+	max-height: 100vh;
 	background-color: var(--bg-body);
 }
 
